Featured Imaged completed

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,8 @@
      "text": [
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 89.0.4389\n",
-      "[WDM] - Get LATEST driver version for 89.0.4389\n"
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Driver [/Users/tiffanyelle/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
      ]
     },
     {
@@ -32,13 +33,6 @@
      "text": [
       "\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Driver [/Users/tiffanyelle/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -127,6 +121,90 @@
    "source": [
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JPL Mars Space Images - Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executable_path = {\"executable_path\": ChromeDriverManager().install()}\n",
+    "browser = Browser(\"chrome\", **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit the following URL\n",
+    "url = \"https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/index.html\"\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting featured image url\n",
+    "featured_image_url = soup.find(\"img\", class_=\"headerimage fade-in\")[\"src\"]\n",
+    "featured_image_url = url.replace(\"index.html\",\"\") + featured_image_url\n",
+    "featured_image_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
