completed Mars Hemisphere

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -410,11 +410,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mars Hemispheres"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "for i in range(4):\n",
+    "    \n",
+    "    temp_dict = {}\n",
+    "    \n",
+    "    #navigating to the main website\n",
+    "    url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "    browser.visit(url)\n",
+    "    xpath = '//h3'\n",
+    "    results = browser.find_by_xpath(xpath)\n",
+    "    img = results[i]\n",
+    "    \n",
+    "    #clicking on each image\n",
+    "    img.click()\n",
+    "    \n",
+    "    #getting image link and title\n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    img_url = soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
+    "    img_url = 'https://astrogeology.usgs.gov'+img_url\n",
+    "    title = soup.find(\"h2\", class_=\"title\").text\n",
+    "    \n",
+    "    #storing the result in dict\n",
+    "    temp_dict['title'] = title\n",
+    "    temp_dict['img_url'] = img_url\n",
+    "    \n",
+    "    #appending dict in list\n",
+    "    hemisphere_image_urls.append(temp_dict)\n",
+    "    \n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.quit()"
+   ]
   }
  ],
  "metadata": {
